# rag-eval-framework

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
agentic_eval/: __init__.py
agentic_eval/agents/: __init__.py  case_generator.py  diagnosis_agent.py  evaluation_agent.py  pipeline.py
agentic_eval/clients/: __init__.py  base.py  http_client.py  mock_client.py
agentic_eval/metrics/: __init__.py  generation.py  retrieval.py  task.py
agentic_eval/reports/: __init__.py  report_generator.py
agentic_eval/schemas/: __init__.py  case_schema.py  result_schema.py
agentic_eval/utils/: io.py  text.py  timer.py
docs/: design.md  external_rag_integration_guide.md  target_agent_api.md
examples/: academic_rag_cases.jsonl
examples/sample_docs/: api_doc.md  error_cases.md  schema_doc.md
scripts/: run_eval.py  test_target_client.py
