[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-eval-framework"
version = "0.1.0"
description = "Multi-agent RAG/Agent evaluation and diagnosis framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "matplotlib>=3.8.0",
  "rich>=13.7.0",
]

[tool.setuptools.packages.find]
include = ["agentic_eval*"]
